Code refactor button / checkbox

--- a/src/lib/components/button/button.component.html
+++ b/src/lib/components/button/button.component.html
@@ -1,6 +1,6 @@
 <button #button
         type="button"
-        class="btn btn-{{buttonType}}"
+        class="btn btn-{{buttonType}} {{classNames}}"
         (click)="onClick($event)"
         [disabled]="disabled">
 	<span>{{label}}</span>
