--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
- <common-phn
-  mask="0000 000 000"
- />
- <br/>
- <br/>
+
+<h1>Component Showcase</h1>
+
+<section>
+  <h2>PHN Component</h2>
+  <common-phn mask="0000 000 000"/>
+</section>
+
+<section>
+  <h2>Address Component</h2>
+
  <common-address
   [country]="country"
   [state]="state"
@@ -11,4 +17,6 @@
   [zip]="zip"
   [address2]="address2"
   [address3]="address3"></common-address>
+</section>
+<section>
 
